modules/wycs/tests/valid/test_051.wycs
assert:
  forall({int} xs):
       |xs| == 0 ==> xs == {}
