modules/wycs/tests/invalid/test_063.wycs
assert:
  forall({int} xs):
    |xs| >= 0 ==> |xs| > 0
